# QVulkanApp

./: .gitmodules  CMakeLists.txt  Camera.h  LICENSE  MappedData.cpp  MappedData.h  QVulkan2.7z  README.md  RenderInterface.cpp  RenderInterface.h  ScopeCommandBuffer.cpp  ScopeCommandBuffer.h  TextureLoader.cpp  VulkanFactory.cpp  VulkanFactory.h  VulkanImage.h  VulkanUtils.cpp  VulkanUtils.h  main.cpp
cmake/: download_and_extract.cmake  get_qt.cmake  qt-install.cmake
shaders/: block.frag  block.frag.spv  block.vert  block.vert.spv  generate-spirv.bat  shaders.qrc  texture.frag  texture.frag.spv  texture.vert  texture.vert.spv
source/: CMakeLists.txt
source/application/: CMakeLists.txt  Loader.cpp  RenderInterface.cpp  main.cpp
source/noiser/: CMakeLists.txt  Noise.cpp  Noise.h
source/renderer/: Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Common.h  DescriptorSet.cpp  Factory.cpp  MappedData.cpp  MappedData.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  ScopeCommandBuffer.cpp  ScopeCommandBuffer.h  Texture.cpp  Texture.h  VulkanImage.cpp  VulkanUtils.cpp
source/renderer/include/: DataProvider.h  ICamera.h  IFactory.h  IRenderer.h  VulkanFactory.h  VulkanImage.h
source/renderer/private/: Buffer.cpp  Buffer.h  Camera.cpp  DescriptorSet.cpp  DescriptorSet.h  Factory.cpp  Factory.h  MappedData.cpp  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  ScopeCommandBuffer.cpp  ScopeCommandBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h
source/scene/: CMakeLists.txt  Chunk.cpp  Chunk.h  ChunkStorage.cpp  ChunkStorage.h  ChunkUtils.cpp  ChunkUtils.h  Scene.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  ThreadUtils.hpp
source/scene/include/: IResourceLoader.h  IScene.h
source/scene/tests/: CMakeLists.txt  ChunkUtilsTests.cpp
textures/: textures.qrc
